gcc/testsuite/gm2/errors/fail/badvar.mod
MODULE badvar ;

PROCEDURE bar (VAR a: CARDINAL) ;
VAR
   Foo: a ;
BEGIN
END bar ;

BEGIN
END badvar.
